--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,26 +4,95 @@
     <%- include('./partials/head') %>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogs</title>
+    <style>
+        .like-btn {
+            background-color: white;  /* Set background color to white */
+            border: none;             
+            padding: 5px;           
+            cursor: pointer;        
+        }
+        .like-btn:hover {
+            background-color: #f0f0f0; 
+            border: none;
+        }
+        .like-icon {
+            font-size: 24px; 
+            color: #555555;
+        }
+        .comment-icon{
+            color: #555555;
+        }
+    </style>
 </head>
 <body>
     <%- include('./partials/navBar') %>
     <div class="container mt-3">
-      <div class="row">
-          <% blogs.forEach(function(blog) { %>
-              <div class="col-md-3 mb-4"> 
-                  <div class="card" style="width: 100%;">
-                      <img src="<%= blog.coverImageUrl %>" class="card-img-top" alt="Blog Cover">
-                      <div class="card-body">
-                        <p class="card-title" style="font-size: 1.25rem; font-weight: 500;"><%= blog.title %></p>
-                        <a href="/blog/blogDetails/<%= blog._id %>" class="btn btn-primary">View</a>
+        <div class="row">
+            <% blogs.forEach(function(blog) { %>
+                <div class="col-md-3 mb-4"> 
+                    <div class="card h-100 ">
+                        <img src="<%= blog.coverImageUrl %>" class="card-img-top" alt="Blog Cover" style="aspect-ratio: 16/9; object-fit: cover;">
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <div>
+                                <p class="card-title" style="font-size: 1rem; font-weight: 500; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">
+                                    <%= blog.title %>
+                                </p>
+                            </div>                           
+                            <div>
+                                <div class="d-flex justify-content-between align-items-center mt-1 mb-1">
+                                    <div class="d-flex align-items-center ">
+                                   <% if (blog.like == 0) { %>
+                                    <button class="like-btn" style = "color:#555555 " data-id="<%= blog._id %>">
+                                        <span class="like-icon-<%= blog._id %> material-icons">thumb_up</span>
+                                    </button>
+                                   <% } else { %>
+                                    <button class="like-btn" style = "color:green " data-id="<%= blog._id %>">
+                                        <span class="like-icon-<%= blog._id %> material-icons">thumb_up</span>
+                                    </button>
+                                    <% } %>
+                                        <p class="mb-0"><span id="like-count-<%= blog._id %>"><%= blog.likes.length %></span></p>
+                                    </div>
+                                    <div class="d-flex align-items-center">
+                                        <p class="mb-0"><%= blog.comments %></p>
+                                        <span class="comment-icon material-icons">comment</span>
+                                    </div>
+                                </div> 
+                                <a href="/blog/blogDetails/<%= blog._id %>" class="btn btn-primary mt-auto">View</a>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-              </div>
-          <% }); %>
-      </div>
-  </div>
-  
+                </div>
+            <% }); %>
+        </div>
+    </div>
     <%- include('./partials/script') %>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+
+$(document).ready(function() {
+    $(document).on('click', '.like-btn', function() {
+        const blogId = $(this).data('id');
+
+        $.ajax({
+            url: `/blog/like/${blogId}`,
+            method: 'POST',
+            success: function(response) { 
+                if (response.value == 2) {
+                    $(`.like-icon-${blogId}`).css('color', '#555555');  
+                } else if(response.value == 1){
+                    $(`.like-icon-${blogId}`).css('color', 'green'); 
+                }
+                $(`#like-count-${blogId}`).text(response.likesCount);
+            },
+            error: function(xhr, status, error) {
+                console.log(xhr, status, error);
+                alert('An error occurred');
+            }
+        });
+    });
+});
+
+</script>
 </body>
 </html>
