--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -21,6 +21,11 @@
             <div class="card-body">
                 <img src="<%= blog.coverImageUrl %>" class="card-img-top img-fluid" alt="Cover Image for <%= blog.title %>">
                 <pre class="card-text mt-3"><%= blog.body %></pre>
+                <p class="mt-3 mb-0">
+                    <strong>Author:</strong> <%= blog.createdBy.name %> 
+                    <br>
+                    <small>Created on: <%= blog.createdAt.toDateString() %></small>
+                </p>                
             </div>
         </div>
     </div>
