--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,13 +43,13 @@
                                 <div class="d-flex justify-content-between align-items-center mt-1 mb-1">
                                     <div class="d-flex align-items-center ">
                                    <% if (blog.like == 0) { %>
-                                    <button class="like-btn" style = "color:#555555 " data-id="<%= blog._id %>">
-                                        <span class="like-icon-<%= blog._id %> material-icons">thumb_up</span>
-                                    </button>
+                                    <button class="like-btn material-icons" style="color:#555555" data-id="<%= blog._id %>">
+                                        thumb_up
+                                    </button>                                    
                                    <% } else { %>
-                                    <button class="like-btn" style = "color:green " data-id="<%= blog._id %>">
-                                        <span class="like-icon-<%= blog._id %> material-icons">thumb_up</span>
-                                    </button>
+                                    <button class="like-btn material-icons" style="color:green" data-id="<%= blog._id %>">
+                                        thumb_up
+                                    </button>                                    
                                     <% } %>
                                         <p class="mb-0"><span id="like-count-<%= blog._id %>"><%= blog.likes.length %></span></p>
                                     </div>
@@ -70,28 +70,34 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 
-$(document).ready(function() {
-    $(document).on('click', '.like-btn', function() {
-        const blogId = $(this).data('id');
-
-        $.ajax({
-            url: `/blog/like/${blogId}`,
-            method: 'POST',
-            success: function(response) { 
-                if (response.value == 2) {
-                    $(`.like-icon-${blogId}`).css('color', '#555555');  
-                } else if(response.value == 1){
-                    $(`.like-icon-${blogId}`).css('color', 'green'); 
-                }
-                $(`#like-count-${blogId}`).text(response.likesCount);
-            },
-            error: function(xhr, status, error) {
-                console.log(xhr, status, error);
-                alert('An error occurred');
+    document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('click', function(event) {
+            if (event.target.classList.contains('like-btn')) {
+                const blogId = event.target.getAttribute('data-id');
+    
+                fetch(`/blog/like/${blogId}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.value == 2) {
+                        event.target.style.color = '#555555'; 
+                    } else if (data.value == 1) {
+                        event.target.style.color = 'green';
+                    }
+                    document.getElementById(`like-count-${blogId}`).textContent = data.likesCount;
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('An error occurred');
+                });
             }
         });
     });
-});
+    
 
 </script>
 </body>
