--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,26 +4,7 @@
     <%- include('./partials/head') %>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
-    <style>
-        .like-btn {
-            background-color: white;  /* Set background color to white */
-            border: none;             
-            padding: 5px;           
-            cursor: pointer;        
-        }
-        .like-btn:hover {
-            background-color: #f0f0f0; 
-            border: none;
-        }
-        .like-icon {
-            font-size: 24px; 
-            color: #555555;
-        }
-        .comment-icon{
-            color: #555555;
-        }
-    </style>
+    <title>BlogVerse</title>    
 </head>
 <body>
     <%- include('./partials/navBar') %>
