--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,5 +15,45 @@
       margin: 10px 0;
     }
   }
-  
+  .like-btn {
+    background-color: white;  /* Set background color to white */
+    border: none;             
+    padding: 5px;           
+    cursor: pointer;        
+}
+.like-btn:hover {
+    background-color: #f0f0f0; 
+    border: none;
+}
+.like-icon {
+    font-size: 24px; 
+    color: #555555;
+}
+.comment-icon{
+    color: #555555;
+}
+.card {
+  border: 1px solid #e0e0e0; 
+  border-radius: 8px;        
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
+  transition: background-color 0.3s, transform 0.3s; 
+}
+.card:hover {
+  background-color: #f9f9f9;  
+  transform: translateY(-2px); 
+}
+.card-img-top {
+  border-top-left-radius: 8px; 
+  border-top-right-radius: 8px;
+}
+.card-title {
+  font-size: 1rem;
+  font-weight: 500;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0.5rem; 
+}   
 </style>
