--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid d-flex justify-content-between">
     <div class="d-none d-lg-flex align-items-center">
-      <a class="navbar-brand" href="/">Blogs</a>
+      <a class="navbar-brand" href="/">BlogVerse</a>
       <a class="nav-link text-light ms-3" href="/blog/blogForm">Add Blog</a>
       <% if (locals.user) { %>
         <a class="nav-link text-light ms-3" href="/blog/showmyBlogs">My Blogs</a>
