--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -37,7 +37,7 @@
     <div class="d-lg-none">
     <div class="d-flex justify-content-between align-items-center">
       <div>
-      <a class="navbar-brand" href="#">Blogs</a>
+      <a class="navbar-brand" href="#">BlogVerse</a>
     </div>
     <form class="d-flex mr-1 mx-auto" role="search" action="/blog/search" method="post">
       <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
