--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -65,7 +65,7 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <div>
-                            <img src="/images/default.jpg" width="30px" alt="Profile">
+                            <img src="<%=comment.createdBy.profileImageUrl %>" width="30px" alt="Profile">
                             <p><%= comment.createdBy.name %></p>
                         </div>
                         <div class = "d-flex">
