--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -22,18 +22,18 @@
     <div class="container mt-3">
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center">
-                <div>
+                <div style="overflow: auto;">
                     <p class="card-title" style="font-size: 1rem; font-weight: 500; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">
                         <%= blog.title %>
                     </p>
-                </div> 
-                <div class = "flex">
-                    <a href="/blog/updateBlogForm/<%= blog._id %>" class="btn btn-primary btn-sm mr-2">Edit</a>
-                    <a href="/blog/deleteBlog/<%= blog._id %>" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Blog?');">Delete</a>
-                </div>
+                </div>                
+                <% if (locals.user._id == locals.blog.createdBy._id){ %>
+                    <div class="d-flex">
+                        <a href="/blog/updateBlogForm/<%= blog._id %>" class="btn btn-primary btn-sm mr-2">Edit</a>
+                        <a href="/blog/deleteBlog/<%= blog._id %>" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Blog?');">Delete</a>
+                    </div>                    
+                <% } %>
             </div>
-            
-
             <div class="card-body">
                 <img src="<%= blog.coverImageUrl %>" class="card-img-top img-fluid" alt="Cover Image for <%= blog.title %>">
                 <pre class="card-text mt-3"><%= blog.body %></pre>
