--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -19,7 +19,8 @@
               <%= locals.user.name %>
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/user/logout">LogOut</a></li>
+              <li><a class="dropdown-item border " href="/history/userHistory">History</a></li>
+              <li><a class="dropdown-item border " href="/user/logout">LogOut</a></li>
             </ul>
           </li>
         </ul>
@@ -65,6 +66,7 @@
                 <%= locals.user.name %>
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/history/userHistory">History</a></li>
                 <li><a class="dropdown-item" href="/user/logout">LogOut</a></li>
               </ul>
             </li>
