--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -18,8 +18,9 @@
     
           <div class="form-group">
             <label for="body">Body</label>
-            <textarea class="form-control" id="body" name="body" rows="5" placeholder="Enter the content" required></textarea>
+            <textarea class="form-control" id="body" name="body" rows="10" style="height: 350px; width: 100%;" placeholder="Enter the content" required></textarea>
           </div>
+          
           <div class="form-group mt-2">
             <label for="coverImage">Cover Image</label>
             <input type="file" class="form-control-file" id="coverImage" name="coverImage" accept="image/*">
