--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -22,40 +22,46 @@
             width: auto; 
             height: auto;
           }
-          
-        
-        
+          pre {
+            font-family: "Monaco", Courier, monospace;
+            font-size: 14px;
+            color: #f8f8f2;
+            background-color: #2e2e2e;
+            padding: 15px;
+            border-radius: 5px;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+          }
     </style>
 </head>
 <body>  
     
     <%- include('./partials/navBar') %>
-    <div class="container mt-3">
-        <div class="card">
+    <div class="container mt-3 pointer">
+        <div class="card pointer">
             <div class="card-header d-flex justify-content-between align-items-center">
                 <div style="overflow: auto;">
                     <p class="card-title" style="font-size: 1rem; font-weight: 500;">
                         <%= blog.title %>
                     </p>
-                </div>                
-                <% if (locals.user._id == locals.blog.createdBy._id){ %>
+                </div>
+                <% if (locals.user._id == locals.blog.createdBy._id) { %>
                     <div class="d-flex">
                         <a href="/blog/updateBlogForm/<%= blog._id %>" class="btn btn-primary btn-sm mr-2">Edit</a>
                         <a href="/blog/deleteBlog/<%= blog._id %>" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Blog?');">Delete</a>
-                    </div>                    
+                    </div>
                 <% } %>
             </div>
             <div class="card-body">
                 <div class="text-center">
-                    <img src="<%= blog.coverImageUrl %>" class="card-img-top img-fluid  border border-dark rounded" alt="Cover Image for <%= blog.title %>">
+                    <img src="<%= blog.coverImageUrl %>" class="card-img-top img-fluid border border-dark rounded" alt="Cover Image for <%= blog.title %>">
                 </div>
                 <div id="blog-content" class="card-text ms-3 mt-3">
                     <pre><%= blog.body.substring(0, 1000) %>...
                         <a href="#" id="read-more" data-id="<%= blog.id %>">Read more</a>
-                     </pre> 
-                   
+                    </pre> 
                 </div>
-                  <p class="mt-3 mb-0">
+                <p class="mt-3 mb-0">
                     <strong>Author:</strong> <%= blog.createdBy.name %> 
                     <br>
                     <small>Created on: <%= blog.createdAt.toDateString() %></small>
