--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -9,7 +9,7 @@
     </div>
     <form class="d-none d-lg-flex mx-auto" role="search" action="/blog/search" method="post">
     <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
-     <button class="btn btn-outline-success" type="submit">Search</button>
+     <button class="btn btn-outline-success ml-1" type="submit">Search</button>
     </form>
     <div class="d-none d-lg-flex align-items-center">
       <% if (locals.user) { %>
